<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity.MainActivity"
    android:background="@drawable/bg"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="300dp"
        android:text="@string/homeActivitySlogan"
        android:textColor="#fff"
        android:textSize="24dp"
        android:textAlignment="center"/>
    <Button

        android:id="@+id/btn_signin"
        android:layout_width="381dp"
        android:layout_height="74dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/mainActivitySignIn"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_toEndOf="@+id/textView2"
        android:textColor="#fff" />
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="381dp"
        android:layout_height="74dp"
        android:background="@drawable/roundedbutton2"
        android:text="@string/mainActivitySignUp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textColor="#f29a69"
         />





</LinearLayout>