<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#58309E"
    tools:context=".Teacher.NewClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Create New Class"
            android:textColor="#fff"
            android:textSize="23dp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#fff"
            android:text="@string/newClassChooseLang"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/sp_langguage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#FFF"
            android:entries="@array/language"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#fff"
            android:paddingTop="10dp"
            android:text="Please enter your class name"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/class_name"
            android:layout_width="match_parent"
            android:background="#FFF"
            android:paddingStart="15dp"
            android:layout_height="50dp"
            android:hint="class name" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#fff"
            android:paddingTop="10dp"
            android:text="@string/newClassInstructorName"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/class_ins"
            android:layout_width="match_parent"
            android:background="#FFF"
            android:paddingStart="15dp"
            android:layout_height="50dp"
            android:hint="@string/newClassInstructorHint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#fff"
            android:paddingTop="10dp"
            android:text="@string/newClassDesc"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/class_des"
            android:layout_width="match_parent"
            android:background="#FFF"
            android:paddingStart="15dp"
            android:layout_height="100dp"
            android:hint="@string/newClassDesc" />


        <Button
            android:id="@+id/create"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:background="@drawable/roundedbutton"
            android:layout_margin="30dp"
            android:text="@string/newClassClass" />
    </LinearLayout>
</ScrollView>