<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EDED"
    tools:context=".MainActivity.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/colorPrimaryDark"></RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avatarIv"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_add_image"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/colorPrimary"
                android:padding="5dp"></ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/nameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profileName"
                    android:textSize="22dp"
                    android:layout_marginStart="5dp"
                    android:textColor="#fff"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/emailTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profileEmail"
                    android:layout_marginStart="5dp"
                    android:textColor="#fff"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/phoneTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profilePhone"
                    android:layout_marginStart="5dp"
                    android:textColor="#fff"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

</ScrollView>