<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#58309E"
    tools:context=".Login.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="15dp"
            android:layout_marginTop="60dp"
            android:text="@string/welcomeback"
            android:textColor="#fff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tex12t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingStart="15dp"
            android:padding="10dp"
            android:text="Stay Signed in to your account to make searching easier."
            android:textColor="#fff"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="#fff"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="15dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="#fff"
            android:paddingStart="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:paddingStart="15dp"
            android:background="#fff"
            android:ems="10"
            android:hint="Re-enter Pasword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:paddingStart="15dp"
            android:background="#fff"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp">

            <CheckBox
                android:id="@+id/agree_tos"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:text="Agree to"></CheckBox>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_toRightOf="@+id/agree_tos"
                android:text="Term Of Service"
                android:lineHeight="60dp"
                android:gravity="center"></TextView>

        </RelativeLayout>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:text="@string/signup"
            android:background="@drawable/roundedbutton"
            android:textColor="#fff" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="Already have account? "
                android:id="@+id/ac_signin"
                android:lineHeight="60dp"
                android:gravity="center"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_toRightOf="@+id/ac_signin"
                android:text="Sign In"
                android:textColor="#FF0000"
                android:lineHeight="60dp"
                android:gravity="center"></TextView>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>